--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h1>Sign Up</h1>
+    <form action="" method="post">
+        <div class="">
+            <label for="username">Enter your username :</label>
+            <input type="text" name="username" id="username" placeholder="username">
+        </div>
+        <div class="">
+            <label for="password">Enter your password :</label>
+            <input type="password" name="password" id="password" placeholder="password">
+        </div>
+        <button>Sign Up</button>
+    </form>
 </body>
 </html>
