--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Sign Up</h1>
-    <form action="" method="post">
+    <form action="/register" method="post">
         <div class="">
             <label for="username">Enter your username :</label>
             <input type="text" name="username" id="username" placeholder="username">
